--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/myCustom.css">
 
-    <title>Nieto Cars</title>
+    <title>Rent Cars Nieto</title>
 </head>
 
 <body>
