--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
 
-                    <a href="#" class="button">Know More</a>
+                    <a href="about.html" class="button">Know More</a>
                 </div>
 
 
@@ -166,18 +166,13 @@
                 <ul class="featured__filters">
                     <li>
                         <button class="featured__item" data-filter=".tesla">
-                            <img src="assets/img/logo3.png" alt="">
+                            <img src="assets/img/hyundai-logo.png" alt="">
 
                         </button>
                     </li>
                     <li>
                         <button class="featured__item" data-filter=".audi">
-                            <img src="assets/img/logo2.png" alt="">
-                        </button>
-                    </li>
-                    <li>
-                        <button class="featured__item" data-filter=".porsche">
-                            <img src="assets/img/logo1.png" alt="">
+                            <img src="assets/img/kia-logo.png" alt="">
                         </button>
                     </li>
                 </ul>
@@ -199,10 +194,10 @@
                     <article class="featured__card mix tesla">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Tesla</h1>
-                        <h3 class="featured__subtitle">Model 3</h3>
-                        <img src="assets/img/featured2.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$45,900</h3>
+                        <h1 class="featured__title">Kia</h1>
+                        <h3 class="featured__subtitle">Cerato</h3>
+                        <img src="assets/img/kia-cerato.png" alt="" class="featured__img">
+                        <h3 class="featured__price">$180 us at Day</h3>
                         <button class="button featured__button">
                             <i class="ri-shopping-bag-2-line"></i>
                         </button>
@@ -211,10 +206,10 @@
                     <article class="featured__card mix audi">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Audi</h1>
-                        <h3 class="featured__subtitle">E-tron</h3>
-                        <img src="assets/img/featured3.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$175,900</h3>
+                        <h1 class="featured__title">Hyundai</h1>
+                        <h3 class="featured__subtitle">Tuckson</h3>
+                        <img src="assets/img/r2.jpg" alt="" class="featured__img">
+                        <h3 class="featured__price">$280 us at Day</h3>
                         <button class="button featured__button">
                             <i class="ri-shopping-bag-2-line"></i>
                         </button>
@@ -223,10 +218,10 @@
                     <article class="featured__card mix porsche">
                         <div class="shape shape__smaller"></div>
 
-                        <h1 class="featured__title">Porsche</h1>
-                        <h3 class="featured__subtitle">Boxster 987</h3>
-                        <img src="assets/img/featured4.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$126,900</h3>
+                        <h1 class="featured__title">Kia</h1>
+                        <h3 class="featured__subtitle">Sportage</h3>
+                        <img src="assets/img/Kia-Sportage-front.png" alt="" class="featured__img">
+                        <h3 class="featured__price">$260 us at Day</h3>
                         <button class="button featured__button">
                             <i class="ri-shopping-bag-2-line"></i>
                         </button>
@@ -247,17 +242,17 @@
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
-                        Do You Want To Receive <br> Special Offers?
+                        Our cars are perfect for colombia routes<br> City, mountain, dessert, forest or coast?
                     </h2>
 
                     <p class="offer__description">Be the first to receive all the information about our
                         products and new cars by email by subscribing to our
                         mailing list.</p>
 
-                    <a href="#" class="button">Subscribe Now</a>
+                    <a href="registration.html" class="button">Rent Registration</a>
                 </div>
 
-                <img src="assets/img/offer.png" alt="" class="offer__img">
+                <img src="assets/img/Front-Black.png" alt="" class="offer__img">
 
             </div>
         </section>
@@ -272,7 +267,7 @@
             <div class="footer__content">
                 <a href="#" class="footer__logo">
                     <i class=""></i>
-                    Nieto Cars
+                    Nieto Rent a Car
                 </a>
                 <p class="footer__description">
                     We offer the best cars of <br>
