forma a todas las paginas

--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,136 @@
         </nav>
     </header>
 
+    <body>
+        <!--==================== GALLERY BANNER ====================-->
+        <section class="gallery section">
+            <div class="gallery__container container grid">
+                <video class="video__slide active" src="assets/video/vid_5.mp4" autoplay muted loop></video>
+            </div>
+        </section>
+
+        <section class="about section" id="about">
+            <div class="about__container container grid">
+                <div class="about__group">
+                    <img src="assets/img/kia_spo_54.jpg" alt="" class="about__img">
+
+                    <div class="about__card">
+                        <h3 class="about__card-title">12 Cars in our Flote</h3>
+                        <p class="about__card-description">Confortables Vehicles</p>
+                    </div>
+                </div>
+
+                <div class="about__data">
+                    <h2 class="section__title about__title">Machines With <br> Future  Eco Technology</h2>
+                    <p class="about__description">See the future with high-performance Gas cars produced by
+                        renowned brands. They feature futuristic builds and designs with
+                        new and innovative platforms that last a long time.</p>
+
+                    <a href="rent.html" class="button">Know More</a>
+                </div>
+            </div>
+        </section>
+
+        <!--==================== FEATURED ====================-->
+        <section class="featured section" id="featured">
+            <h2 class="section__title">Cars Models</h2>
+            <div class="featured__container container">
+                <ul class="featured__filters">
+                    <li>
+                        <button class="featured__item" data-filter=".tesla">
+                            <img src="assets/img/hyundai-logo.png" alt="">
+
+                        </button>
+                    </li>
+                    <li>
+                        <button class="featured__item" data-filter=".audi">
+                            <img src="assets/img/kia-logo.png" alt="">
+                        </button>
+                    </li>
+                </ul>
+
+                <div class="featured__content grid">
+
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Kia</h1>
+                        <h3 class="featured__subtitle">Picanto</h3>
+                        <img src="assets/img/Front-Black.png" alt="" class="featured__img">
+                        <h3 class="featured__price">$99 us at Day</h3>
+                        <button class="button featured__button">
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix tesla">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Kia</h1>
+                        <h3 class="featured__subtitle">Cerato</h3>
+                        <img src="assets/img/kia-cerato.png" alt="" class="featured__img">
+                        <h3 class="featured__price">$180 us at Day</h3>
+                        <button class="button featured__button">
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix audi">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Hyundai</h1>
+                        <h3 class="featured__subtitle">Tuckson</h3>
+                        <img src="assets/img/r2.jpg" alt="" class="featured__img">
+                        <h3 class="featured__price">$280 us at Day</h3>
+                        <button class="button featured__button">
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+
+                    </article>
+                    <article class="featured__card mix porsche">
+                        <div class="shape shape__smaller"></div>
+
+                        <h1 class="featured__title">Kia</h1>
+                        <h3 class="featured__subtitle">Sportage</h3>
+                        <img src="assets/img/Kia-Sportage-front.png" alt="" class="featured__img">
+                        <h3 class="featured__price">$260 us at Day</h3>
+                        <button class="button featured__button">
+                            <i class="ri-shopping-bag-2-line"></i>
+                        </button>
+                    </article>
+
+                </div>
+            </div>
+
+        </section>
+
+         <!--==================== OFFER ====================-->
+         <section class="offer section">
+
+            <div class="offer__container container grid">
+
+                <img src="assets/img/offer-bg.png" alt="" class="offer__bg">
+
+                <div class="offer__data">
+                    <h2 class="section__title offer__title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+
+                    <p class="offer__description">Be the first to receive all the information about our
+                        products and new cars by email by subscribing to our
+                        mailing list.</p>
+
+                    <a href="#" class="button">Subscribe Now</a>
+                </div>
+
+                <img src="assets/img/Kia-Rio-Sedan.png" alt="" class="offer__img">
+
+            </div>
+
+        </section>
+
+    </body>
+
 
 
 
