--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Cars
+                Nieto Rent a Car
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
