--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href=index.html class="nav__link active-link">Home</a>
+                        <a href="index.html" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
                         <a href="about.html" class="nav__link ">About</a>
@@ -57,7 +57,9 @@
         </nav>
     </header>
 
-    <body>
+    <!--************* MAIN CODE ****************-->
+
+    <main class="main">
         <!--==================== GALLERY BANNER ====================-->
         <section class="gallery section">
             <div class="gallery__container container grid">
@@ -68,7 +70,7 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/kia_spo_54.jpg" alt="" class="about__img">
+                    <img src="assets/img/kia_spo_54.webp" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -85,6 +87,13 @@
                     <a href="rent.html" class="button">Know More</a>
                 </div>
             </div>
+        </section>
+            <div class="home__social">
+                <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
+                <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
+                <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
+            </div>
+
         </section>
 
         <!--==================== FEATURED ====================-->
@@ -159,9 +168,10 @@
             </div>
 
         </section>
+       
 
-         <!--==================== OFFER ====================-->
-         <section class="offer section">
+        <!--==================== OFFER ====================-->
+          <section class="offer section">
 
             <div class="offer__container container grid">
 
@@ -184,12 +194,9 @@
             </div>
 
         </section>
+    </main>
 
-    </body>
-
-
-
-
+    <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
         <div class="shapeX shape__small"></div>
