--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/myCustom.css">
 
-    <title>Nieto Cars</title>
+    <title>Nieto Rent a Car</title>
 </head>
 
 <body>
@@ -23,12 +23,12 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Cars
+                Nieto Rent a Car
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href=index.html class="nav__link active-link">Home</a>
+                        <a href="index.html" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
                         <a href="about.html" class="nav__link ">About</a>
@@ -57,8 +57,9 @@
         </nav>
     </header>
 
+    <!--************* MAIN CODE ****************-->
 
-    <body>
+    <main class="main">
         <!--==================== GALLERY BANNER ====================-->
         <section class="gallery section">
             <div class="gallery__container container grid">
@@ -69,7 +70,7 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/kia_spo_54.jpg" alt="" class="about__img">
+                    <img src="assets/img/kia_spo_54.webp" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -86,6 +87,13 @@
                     <a href="rent.html" class="button">Know More</a>
                 </div>
             </div>
+        </section>
+            <div class="home__social">
+                <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
+                <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
+                <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
+            </div>
+
         </section>
 
         <!--==================== FEATURED ====================-->
@@ -160,9 +168,10 @@
             </div>
 
         </section>
+       
 
-         <!--==================== OFFER ====================-->
-         <section class="offer section">
+        <!--==================== OFFER ====================-->
+          <section class="offer section">
 
             <div class="offer__container container grid">
 
@@ -185,12 +194,9 @@
             </div>
 
         </section>
+    </main>
 
-    </body>
-
-
-
-
+    <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
         <div class="shapeX shape__small"></div>
@@ -199,7 +205,7 @@
             <div class="footer__content">
                 <a href="#" class="footer__logo">
                     <i class=""></i>
-                    Nieto Cars
+                    Nieto Rent a Car
                 </a>
                 <p class="footer__description">
                     We offer the best cars of <br>
