--- a/rent.html
+++ b/rent.html
@@ -63,14 +63,14 @@
         <!--==================== GALLERY BANNER ====================-->
         <section class="gallery section">
             <div class="gallery__container container grid">
-                <video class="video__slide active" src="assets/video/vid_5.mp4" autoplay muted loop></video>
+                <video class="video__slide active" src="assets/video/vid_2.mp4" autoplay muted loop></video>
             </div>
         </section>
 
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/kia_spo_54.webp" alt="" class="about__img">
+                    <img src="assets/img/kia_sportage3.png" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -168,6 +168,18 @@
             </div>
 
         </section>
+
+        <section>
+            <p>pay</p>
+        </section>
+
+        <section>
+            <p>medios</p>
+        </section>
+
+        <section>
+            <p>subscribe</p>
+        </section>
        
 
         <!--==================== OFFER ====================-->
@@ -186,10 +198,10 @@
                         products and new cars by email by subscribing to our
                         mailing list.</p>
 
-                    <a href="#" class="button">Subscribe Now</a>
+                    <a href="registration.html" class="button">Subscribe Now</a>
                 </div>
 
-                <img src="assets/img/Kia-Rio-Sedan.png" alt="" class="offer__img">
+                <img src="assets/img/hyundai-tucson.png" alt="" class="offer__img">
 
             </div>
 
