--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,22 @@
 
         </section>
 
+        <section>
+            <p>enlaces</p>
+        </section>
+
+        <section>
+            <p>mapa</p>
+        </section>
+
+        <section>
+            <p>foto</p>
+        </section>
+
+        <section>
+            <p>card dats</p>
+        </section>
+
         
        
 
@@ -104,7 +120,7 @@
 
             <div class="offer__container container grid">
 
-                <img src="assets/img/offer-bg.png" alt="" class="offer__bg">
+                <img src="assets/img/Tucson-N-Line-Teaser12.webp" alt="" class="offer__bg">
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
@@ -118,7 +134,7 @@
                     <a href="registration.html" class="button">Subscribe for rent online</a>
                 </div>
 
-                <img src="assets/img/hyundai-tucson-back.png" alt="" class="offer__img">
+                <img src="assets/img/" alt="" class="offer__img">
 
             </div>
 
