--- a/registration.html
+++ b/registration.html
@@ -63,14 +63,14 @@
         <!--==================== GALLERY BANNER ====================-->
         <section class="gallery section">
             <div class="gallery__container container grid">
-                <video class="video__slide active" src="assets/video/vid_5.mp4" autoplay muted loop></video>
+                <video class="video__slide active" src="assets/video/vid_3.mp4" autoplay muted loop></video>
             </div>
         </section>
 
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/kia_spo_54.webp" alt="" class="about__img">
+                    <img src="assets/img/KIA-SPORTAGE-interieur.png" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -189,7 +189,7 @@
                     <a href="#" class="button">Subscribe Now</a>
                 </div>
 
-                <img src="assets/img/Kia-Rio-Sedan.png" alt="" class="offer__img">
+                <img src="assets/img/Kia_Sportage_inside.webp" alt="" class="offer__img">
 
             </div>
 
