--- a/registration.html
+++ b/registration.html
@@ -70,7 +70,7 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/KIA-SPORTAGE-interieur.png" alt="" class="about__img">
+                    <img src="assets/img/Kia_Sportage_inside.webp" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -96,79 +96,15 @@
 
         </section>
 
-        <!--==================== FEATURED ====================-->
-        <section class="featured section" id="featured">
-            <h2 class="section__title">Cars Models</h2>
-            <div class="featured__container container">
-                <ul class="featured__filters">
-                    <li>
-                        <button class="featured__item" data-filter=".tesla">
-                            <img src="assets/img/hyundai-logo.png" alt="">
-
-                        </button>
-                    </li>
-                    <li>
-                        <button class="featured__item" data-filter=".audi">
-                            <img src="assets/img/kia-logo.png" alt="">
-                        </button>
-                    </li>
-                </ul>
-
-                <div class="featured__content grid">
-
-                    <article class="featured__card mix tesla">
-                        <div class="shape shape__smaller"></div>
-
-                        <h1 class="featured__title">Kia</h1>
-                        <h3 class="featured__subtitle">Picanto</h3>
-                        <img src="assets/img/Front-Black.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$99 us at Day</h3>
-                        <button class="button featured__button">
-                            <i class="ri-shopping-bag-2-line"></i>
-                        </button>
-
-                    </article>
-                    <article class="featured__card mix tesla">
-                        <div class="shape shape__smaller"></div>
-
-                        <h1 class="featured__title">Kia</h1>
-                        <h3 class="featured__subtitle">Cerato</h3>
-                        <img src="assets/img/kia-cerato.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$180 us at Day</h3>
-                        <button class="button featured__button">
-                            <i class="ri-shopping-bag-2-line"></i>
-                        </button>
-
-                    </article>
-                    <article class="featured__card mix audi">
-                        <div class="shape shape__smaller"></div>
-
-                        <h1 class="featured__title">Hyundai</h1>
-                        <h3 class="featured__subtitle">Tuckson</h3>
-                        <img src="assets/img/r2.jpg" alt="" class="featured__img">
-                        <h3 class="featured__price">$280 us at Day</h3>
-                        <button class="button featured__button">
-                            <i class="ri-shopping-bag-2-line"></i>
-                        </button>
-
-                    </article>
-                    <article class="featured__card mix porsche">
-                        <div class="shape shape__smaller"></div>
-
-                        <h1 class="featured__title">Kia</h1>
-                        <h3 class="featured__subtitle">Sportage</h3>
-                        <img src="assets/img/Kia-Sportage-front.png" alt="" class="featured__img">
-                        <h3 class="featured__price">$260 us at Day</h3>
-                        <button class="button featured__button">
-                            <i class="ri-shopping-bag-2-line"></i>
-                        </button>
-                    </article>
-
-                </div>
-            </div>
-
+        <section>
+            <p>Registration</p>
         </section>
-       
+        <section>
+            <p>Sing up</p>
+        </section>
+        <section>
+            <p>enlaces</p>
+        </section>
 
         <!--==================== OFFER ====================-->
           <section class="offer section">
@@ -189,7 +125,7 @@
                     <a href="#" class="button">Subscribe Now</a>
                 </div>
 
-                <img src="assets/img/Kia_Sportage_inside.webp" alt="" class="offer__img">
+                <img src="assets/img/KIA-SPORTAGE-interieur.png" alt="" class="offer__img">
 
             </div>
 
