--- a/registration.html
+++ b/registration.html
@@ -111,7 +111,7 @@
 
             <div class="offer__container container grid">
 
-                <img src="assets/img/offer-bg.png" alt="" class="offer__bg">
+                <img src="assets/img/r2.jpg" alt="" class="offer__bg">
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
