sub menu carrito

--- a/rent.html
+++ b/rent.html
@@ -73,7 +73,7 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/kia_sportage3.png" alt="" class="about__img">
+                    <img src="assets/img/Kia-Sportage front.png" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">Rent the best economic cars selection for colombians geography</h3>
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Rent on-line: Just subscribe and rent<br>or do it personaly in our Bogota's offices</h2>
+                    <h2 class="section__title about__title">Rent on-line: Just subscribe and rent<br>Rent personaly in our Bogota's offices</h2>
                     <p class="about__description"> proceso inscripcion y renta See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
