--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,11 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/picanto-xline.png" alt="" class="about__img">
+
+                    <img src="assets/img/hyundai-tucson-back.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">We are based in bogota</h3>
+                        <h3 class="about__card-title">Contact Nieto Rent a Car</h3>
                         <p class="about__card-description">Part of our service is bring you the car wiht out cost</p>
                     </div>
                 </div>
@@ -87,7 +88,7 @@
                     <a href="about.html" class="button">Know More</a>
                 </div>
             </div>
-        </section>
+        
             <div class="home__social">
                 <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
                 <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
@@ -96,12 +97,38 @@
 
         </section>
 
-        <section>
-            <p>enlaces</p>
-        </section>
+        <hr>
+        <hr>
+        <section class="offer section">
 
-        <section>
-            <p>mapa</p>
+            <div class="offer__container container grid">
+
+                <img src="assets/img/offer-bg.png" alt="" class="offer__bg">
+
+                <div class="offer__data">
+                    <h2 class="section__title offer__title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+
+                    <p class="offer__description">Be the first to receive all the information about our
+                        products and new cars by email by subscribing to our
+                        mailing list.</p>
+
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.879179676466!2d-74.13245222576016!3d4.615632542390687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9eb1800893e1%3A0x542c69a0b0334a6c!2sCl.%2019%20Sur%20%236942%2C%20Bogot%C3%A1!5e0!3m2!1sen!2sco!4v1688249129622!5m2!1sen!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <hr>
+                    <hr>
+                    <h2 class="section__title offer__title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+                    <p class="about__description">See the future with high-performance Gas cars produced by
+                        renowned brands. They feature futuristic builds and designs with
+                        new and innovative platforms that last a long time.</p>
+                        
+                    <a href="about.html" class="button">Know More</a>
+                </div>
+
+            </div>
+
         </section>
 
         <section>
