pages contact registration
last organization

--- a/registration.html
+++ b/registration.html
@@ -70,7 +70,7 @@
         <section class="about section" id="about">
             <div class="about__container container grid">
                 <div class="about__group">
-                    <img src="assets/img/Kia_Sportage_inside.webp" alt="" class="about__img">
+                    <img src="assets/img/tucson-front-half.png" alt="" class="about__img">
 
                     <div class="about__card">
                         <h3 class="about__card-title">12 Cars in our Flote</h3>
@@ -96,6 +96,21 @@
 
         </section>
 
+        <section class="offer section">
+
+            <div class="offer__container container grid">
+
+                <img src="assets/img/full-sportage.png" alt="" class="offer__bg">
+
+                <div class="offer__data">
+                    <h2 class="section__title offer__title">
+                        Do You Want To Receive <br> Special Offers?
+                    </h2>
+                </div>
+            </div>
+
+        </section>
+
         <section>
             <p>Registration</p>
         </section>
@@ -111,7 +126,7 @@
 
             <div class="offer__container container grid">
 
-                <img src="assets/img/r2.jpg" alt="" class="offer__bg">
+                <img src="assets/img/nieto3.png" alt="" class="offer__bg">
 
                 <div class="offer__data">
                     <h2 class="section__title offer__title">
@@ -122,11 +137,8 @@
                         products and new cars by email by subscribing to our
                         mailing list.</p>
 
-                    <a href="#" class="button">Subscribe Now</a>
+                    <a href="rent.html" class="button">Rent</a>
                 </div>
-
-                <img src="assets/img/KIA-SPORTAGE-interieur.png" alt="" class="offer__img">
-
             </div>
 
         </section>
