--- a/registration.html
+++ b/registration.html
@@ -73,18 +73,18 @@
                     <img src="assets/img/tucson-front-half.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">12 Cars in our Flote</h3>
-                        <p class="about__card-description">Confortables Vehicles</p>
+                        <h3 class="about__card-title">Register and Rent On Line</h3>
+                        <p class="about__card-description">Easy and Secure</p>
                     </div>
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Machines With <br> Future  Eco Technology</h2>
+                    <h2 class="section__title about__title">Follow the steps<br>and Go to Rent</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
                         new and innovative platforms that last a long time.</p>
 
-                    <a href="rent.html" class="button">Know More</a>
+                    <a href="know.html" class="button">Know More</a>
                 </div>
             </div>
         </section>
@@ -114,15 +114,9 @@
         <section>
             <p>Registration</p>
         </section>
-        <section>
-            <p>Sing up</p>
-        </section>
-        <section>
-            <p>enlaces</p>
-        </section>
 
         <!--==================== OFFER ====================-->
-          <section class="offer section">
+        <section class="offer section">
 
             <div class="offer__container container grid">
 
